# WebViewBrowser

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/petr/myapplication/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Network.cpp  Network.h  YandexAPI.cpp  YandexAPI.h
app/src/main/java/com/example/petr/myapplication/: Config.java  CustomAutoCompleteTextView.java  MainActivity.java  SearchAutoCompleteAdapter.java  Tab.java  TabsList.java  TabsSharedInfo.java  TabsSharedResources.java
app/src/main/res/drawable/: ic_menu_refresh.xml
app/src/main/res/layout/: activity_main.xml  app_bar_main.xml  content_main.xml  menu_tab_item.xml  tab.xml  tip_item.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/petr/myapplication/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
